--- a/public/index.html
+++ b/public/index.html
@@ -15,11 +15,11 @@
     <title>One Piece Finance</title>
     <meta
       name="description"
-      content="Cheaper and faster than Uniswap? Discover One Piece Finance"
+      content="New Yield Farm on Fantom  Dementor.Finance"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="twitter:image" content="https://onepiece.finance/images/egg/hero.png" />
+    <meta name="twitter:image" content="https://dementor.finance/images/egg/hero.png" />
     <meta
       name="twitter:description"
       content="New AMM on Fantom Chain."
