--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>One Piece Finance</title>
+    <title>Dementor Finance</title>
     <meta
       name="description"
       content="New Yield Farm on Fantom  Dementor.Finance"
@@ -25,7 +25,7 @@
       content="New AMM on Fantom Chain."
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="One Piece Finance" />
+    <meta name="twitter:title" content="Dementor Finance" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
